<resources>
    <string name="app_name">WQMS</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wqms_an_iot_enabled_n_water_quality_and_leakage_monitoring_system">
        WQMS- An IoT Enabled \n Water Quality and Leakage Monitoring System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <!--    <string name="wqms_2022">WQMS@2022</string>-->
    <string name="sign_up">Sign Up?</string>
    <string name="water_quality_management_n_system">Water Quality Management \n System</string>
    <string name="wqms_2022">WQMS@2022</string>
    <string name="go_to_login">Go to login</string>
    <string name="global_preference_file_name">global_user_auth_key</string>
    <string name="user_auth_pref_key">global_user_auth_prefs_key</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="custom">Custom</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="axis_desc_time">axis_desc</string>

</resources>