<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="60dp"
        android:layout_width="302dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:text="@string/wqms_an_iot_enabled_n_water_quality_and_leakage_monitoring_system" />

    <EditText
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:ems="10"
        android:autofillHints="">

    </EditText>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:id="@+id/login"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        tools:text="@string/login">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_marginStart="20dp"
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00BCD4"
            android:text="@string/sign_up" />

        <TextView
            android:layout_marginLeft="160dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00BCD4"
            android:text="@string/forgot_password" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wqms_2022"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal">

    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>